<resources>
    <string name="app_name">지트 관리자</string>
    <string name="naver_client_id">rgpXsHhCrIIsnNDKbJbN</string>
    <string name="naver_client_secret">FVBJSKIhIC</string>
    <string name="naver_client_name">지트에듀케이션 매니저앱</string>
    <string name="kakao_native_app_key">ab8f65e8ebaaa5c949cb21c205fa15a3</string>
    <string name="kakao_redirection_scheme">kakaoab8f65e8ebaaa5c949cb21c205fa15a3</string>
    <string name="default_notification_channel_id">jeet_manager_app_channel_id</string>
    <string name="default_notification_headup_channel_id">jeet_manager_app_channel_id_headup</string>
    <string name="msg_intro_request_permission">앱의 기능을 정상적으로 사용하기 위해 권한이 필요합니다. 안내되는 권한을 허용해 주세요.</string>
    <string name="msg_intro_denied_permission">설정 > 권한 에서 권한을 허용할 수 있습니다.</string>
    <string name="intro_failed_request_permission">원활한 이용을 위해 권한을 허용해 주세요.</string>
    <string name="title_permission_accept">허용</string>
    <string name="title_permission_close">종료</string>
    <string name="title_permission_setting">설정</string>
    <string name="parents">학부모</string>
    <string name="student">원생</string>
    <string name="both">학부모 + 원생</string>
    <string name="managers">관리자</string>
    <string name="superadmin">마스터</string>
    <string name="teachers">강사</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="auto_login">자동 로그인</string>
    <string name="join">회원가입</string>
    <string name="find_id_pw">계정 찾기</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="msg_continue">계속하기</string>
    <string name="contact">연락처</string>
    <string name="phone">전화번호</string>
    <string name="bag">분류</string>
    <string name="cancel_reservation">예약취소</string>
    <string name="stu">재원생</string>
    <string name="stu_non">비재원생</string>
    <string name="id_pattern">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_-</string>
    <string name="dialog_title_alarm">알림</string>
    <string name="dialog_title_notice">공지</string>
    <string name="dialog_title_error">오류</string>
    <string name="dialog_title_pw_confirm">사용자 확인</string>
    <string name="dialog_title_edit_note">비고 수정</string>
    <string name="find_type">검색 구분</string>
    <string name="find_type_id">아이디 찾기</string>
    <string name="find_type_pw">비밀번호 찾기</string>
    <string name="msg_find_id">회원님의 아이디는 [%s] 입니다.</string>
    <string name="msg_find_snsid">[%s] 를 통하여 회원가입되어 있습니다. \n[%s] 로 로그인 해 주세요.</string>
    <string name="msg_find_pw">회원님의 임시 비밀번호를 SMS로 전송하였습니다.\n로그인 후 비밀번호를 변경해 주세요.</string>
    <string name="msg_instant_pw">[지트에듀케이션] 회원님의 임시 비밀번호는 %s 입니다.</string>
    <string name="msg_already_login_in">이미 로그인된 사용자입니다.</string>
    <string name="msg_password_mismatch">비밀번호가 틀립니다.</string>
    <string name="msg_parameter_binding_error">입력한 정보를 확인해주세요.</string>
    <string name="msg_user_gubun_mismatch">JEET 회원정보와 일치하지 않습니다.\n학원으로 문의해 주세요.\n(대표번호 : 031-276-8003)</string>
    <string name="msg_user_0_not_jeet_member">JEET 관리자 또는 강사가 아니면 회원가입/로그인을 할 수 없습니다.</string>
    <string name="msg_user_unknown">JEET 회원가입 중 문제가 발생하였습니다.\n학원으로 문의해 주세요.\n(대표번호 : 031-276-8003)</string>
    <string name="msg_pw_confirm">본인 확인에 필요한 \n비밀번호를 입력해주세요.</string>
    <string name="msg_confirm_logout">로그아웃 이후에는 알림 메시지를 받을 수 없습니다.\n로그아웃 하시겠습니까?\n</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="check_attendance">출석체크</string>
    <string name="find">조회</string>
    <string name="terms_agree">약관동의</string>
    <string name="terms_agree_all">전체 동의</string>
    <string name="terms_agreement">이용약관</string>
    <string name="terms_agreement_private_info">개인정보취급방침</string>
    <string name="terms_agreement_msg">약관에 모두 동의하셔야 합니다.</string>
    <string name="join_member">회원가입</string>
    <string name="user_type">사용자 구분</string>
    <string name="name">이름</string>
    <string name="birthday">생년월일</string>
    <string name="birthday_short">생일</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="phonenumber">휴대폰번호</string>
    <string name="auth_request">인증요청</string>
    <string name="input_auth_number">인증번호 입력</string>
    <string name="auth_complete">인증이 완료되었습니다.</string>
    <string name="timeout">시간초과</string>
    <string name="check_duplicate">중복체크</string>
    <string name="duplicate_id">중복된 아이디입니다.</string>
    <string name="duplicate_user">이미 가입한 사용자입니다.</string>
    <string name="duplicate_phone_no">이미 사용 중인 휴대폰 번호입니다.</string>
    <string name="check_password">비밀번호를 숫자, 영문 포함 8자리 이상으로 입력해주세요.</string>
    <string name="check_password2">비밀번호에 동일한 문자를 과도하게 연속해서 사용할 수 없습니다.</string>
    <string name="empty_info">정보가 없습니다.</string>
    <string name="empty_name">이름 정보가 없습니다.</string>
    <string name="empty_user_info">사용자 정보가 없습니다.</string>
    <string name="empty_phonenumber">휴대폰번호 정보가 없습니다.</string>
    <string name="msg_re_auth">휴대폰번호를 다시 인증해 주세요.</string>
    <string name="pattern_mismatch_phonenumber">휴대폰번호를 확인해주세요.</string>
    <string name="mismatch_phonenumber">인증번호가 상이합니다.</string>
    <string name="check_id_empty">아이디를 입력해 주세요.</string>
    <string name="check_name_pattern">이름 형식이 올바르지 않습니다.</string>
    <string name="check_id_min_length">아이디는 최소 4글자 이상 입력해주세요.</string>
    <string name="check_id_duplicate">아이디 중복체크 확인이 필요합니다.</string>
    <string name="password_does_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="password_pattern_not_match">비밀번호 형식을 확인해주세요.</string>
    <string name="password_empty">비밀번호를 입력해주세요.</string>
    <string name="singup_success">회원가입 되었습니다.</string>
    <string name="server_data_empty">알 수 없는 에러가 발생하였습니다.</string>
    <string name="server_error">서버 요청 중 에러가 발생하였습니다.</string>
    <string name="server_fail">서버 요청에 실패하였습니다.</string>
    <string name="auth_number_msg">[지트에듀케이션] 인증번호는 [%d] 입니다.</string>
    <string name="check_auth_number">인증번호 시간이 초과 되었거나 정보가 일치하지 않습니다.</string>
    <string name="login_not_found_member">비밀번호가 일치하지 않거나 사용자 정보가 없습니다.</string>
    <string name="student_info">원생정보</string>
    <string name="loading">로딩중</string>
    <string name="requesting">요청중</string>
    <string name="confirmed">확인 완료</string>
    <string name="hint_no_information">정보 없음</string>
    <string name="title_anonymous">홍길동</string>
    <string name="main_teacher">강사</string>
    <string name="main_superadmin_sub">마스터</string>
    <string name="main_teacher_sub">선생님</string>
    <string name="main_admin_sub">관리자님</string>
    <string name="title_main_school">학교</string>
    <string name="hint_main_school">학교 선택</string>
    <string name="title_main_campus">캠퍼스</string>
    <string name="title_main_grade">학년</string>
    <string name="hint_select_campus">캠퍼스를 선택하세요.</string>
    <string name="hint_select_grade">등급을 선택하세요.</string>
    <string name="title_class">반</string>
    <string name="hint_search_name">원생명</string>
    <string name="hint_search_reportcard">원생명 / 전달사항</string>
    <string name="title_main_subject">제목</string>
    <string name="title_main_content">내용</string>
    <string name="title_main_answer">답변</string>
    <string name="error_not_found">정보 없음</string>
    <string name="error_main_campus_not_found">캠퍼스 정보없음</string>
    <string name="main_student_school_and_grade">학교 및 학년</string>
    <string name="main_teacher_department_short">부서</string>
    <string name="main_teacher_department">담당부서</string>
    <string name="main_teacher_department_not_found">담당부서 정보없음</string>
    <string name="error_school_not_found">학교/학년 정보 없음</string>
    <string name="error_phone_not_found">휴대폰 정보 없음</string>
    <string name="main_attendance">출석</string>
    <string name="msg_empty_attendance">출결 정보가 없습니다.</string>
    <string name="hint_select_department">부서 선택</string>
    <string name="hint_select_department_long">부서를 선택하세요</string>
    <string name="hint_select_clst">학년 선택</string>
    <string name="hint_select_class">학급 선택</string>
    <string name="hint_select_student_type">재원상태 선택</string>
    <string name="hint_input_subject">제목을 입력하세요.</string>
    <string name="hint_input_content">내용을 입력하세요.</string>
    <string name="hint_input_answer">답변을 입력하세요.</string>
    <string name="hint_location">장소</string>
    <string name="hint_member_count">정원</string>
    <string name="hint_input_schedule_memo">상세내용을 입력하세요.(선택)</string>
    <string name="hint_input_schedule_target">대상을 입력하세요.(선택)</string>
    <string name="hint_select_bus">차량 선택</string>
    <string name="select_all">전체선택</string>
    <string name="select_multiple">일괄선택</string>
    <string name="message_note">텍스트 입력</string>
    <string name="hint_main_school_level">초/중/고</string>
    <string name="hint_main_school_grade">캠퍼스구분</string>
    <string name="hint_main_school_grade_short">구분</string>
    <string name="hint_empty_school_grade">캠퍼스구분 정보 없음</string>
    <string name="hint_day_of_week">요일</string>
    <string name="msg_empty_school_grade">캠퍼스구분을 선택해 주세요.</string>
    <string name="msg_empty_day_of_week">요일을 선택해 주세요.</string>
    <string name="msg_empty_time">시간을 설정해 주세요.</string>
    <string name="msg_duplicate_data">동일한 시간이 있습니다.</string>
    <string name="hint_reportcard_select">미지정</string>
    <string name="hint_reportcard_content_short">전달사항</string>
    <string name="hint_reportcard_content">전달사항을 입력해주세요. (필수)</string>
    <string name="main_menu_student_info">원생목록</string>
    <string name="main_menu_student_manage">원생관리</string>
    <string name="main_menu_announcement">공지사항</string>
    <string name="main_menu_announcement_summary">최근 공지사항</string>
    <string name="main_menu_campus_schedule">캠퍼스일정</string>
    <string name="main_menu_notice">알림</string>
    <string name="main_menu_qna">Q&amp;A</string>
    <string name="title_register_notice">알림 등록</string>
    <string name="main_menu_test_reserve">테스트예약</string>
    <string name="main_menu_bus_info">차량정보</string>
    <string name="title_bus_route_info">운행정보</string>
    <string name="main_menu_briefing_reserve">설명회예약</string>
    <string name="title_briefing">설명회</string>
    <string name="title_register_briefing">설명회 등록</string>
    <string name="title_edit_briefing">설명회 수정</string>
    <string name="title_append_recipient">알림수신인 추가</string>
    <string name="title_select_recipient">원생 선택</string>
    <string name="title_list_report_card">성적표 목록</string>
    <string name="title_send_report_card">성적표 전송</string>
    <string name="announcement_list_empty">공지사항이 없습니다.</string>
    <string name="new_announcement_list_empty">최신글이 없습니다.</string>
    <string name="msg_empty_student">원생이 없습니다.</string>
    <string name="title_report_card">성적표</string>
    <string name="settings_title">설정</string>
    <string name="settings_notice_system">시스템알림</string>
    <string name="settings_operation_policy">운영정책</string>
    <string name="settings_private_info_agreement">개인정보 수집 및 이용 동의</string>
    <string name="settings_app_info">앱정보</string>
    <string name="settings_app_version_update">신규 업데이트</string>
    <string name="settings_account_title">계정 관리</string>
    <string name="settings_notice_reception_state">알림 수신여부</string>
    <string name="settings_recipient_state">알림수신인 설정</string>
    <string name="settings_account_profile_title">프로필 정보 수정</string>
    <string name="settings_account_phone_title">전화번호 수정</string>
    <string name="settings_pw_title">비밀번호 수정</string>
    <string name="settings_sns_login">SNS 로그인</string>
    <string name="settings_account_un_link">계정 탈퇴</string>
    <string name="menu_item_edit">수정</string>
    <string name="menu_item_delete">삭제</string>
    <string name="menu_item_public">공개 설정</string>
    <string name="menu_item_private">비공개 설정</string>
    <string name="menu_item_set_main">공지 올리기</string>
    <string name="menu_item_unset_main">공지 내리기</string>
    <string name="menu_stu_info_empty">정보 없음</string>
</resources>