<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_item_edit"
        android:icon="@drawable/ic_vector_edit"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_item_delete"
        android:icon="@drawable/ic_vector_close"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_public"
        android:title="@string/menu_item_public"
        android:icon="@drawable/ic_vector_close"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_private"
        android:title="@string/menu_item_private"
        android:icon="@drawable/ic_vector_close"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_set_main"
        android:title="@string/menu_item_set_main"
        android:icon="@drawable/ic_vector_close"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_unset_main"
        android:title="@string/menu_item_unset_main"
        android:icon="@drawable/ic_vector_close"
        app:showAsAction="collapseActionView" />
</menu>