<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="@dimen/layout_margin_xxsmall"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h50"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>

    <TextView
        android:id="@+id/tv_brf_reserved_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h50"
        android:hint="@string/name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        android:textColor="@color/font_color_default" />
    <TextView
        android:id="@+id/tv_brf_reserved_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_brf_reserved_name"
        app:layout_constraintEnd_toStartOf="@id/view_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h50"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginHorizontal="@dimen/layout_margin_xxsmall"
        android:hint="@string/error_phone_not_found"
        android:textSize="@dimen/font_size"
        android:textColor="@color/font_color_default"/>
    <View android:id="@+id/view_delete"
        android:layout_height="32dp"
        android:layout_width="32dp"
        android:background="@drawable/ic_vector_close"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:stateListAnimator="@xml/animate_button_push"/>
<!--    <TextView-->
<!--        android:id="@+id/tv_brf_school"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toStartOf="@id/tv_brf_grade"-->
<!--        app:layout_constraintTop_toTopOf="@id/guideline_h50"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginHorizontal="@dimen/layout_margin_xxsmall"-->
<!--        android:hint="@string/menu_stu_info_empty"-->
<!--        android:gravity="end"-->
<!--        android:maxLines="1"-->
<!--        android:ellipsize="end"-->
<!--        android:textSize="@dimen/font_size"-->
<!--        android:textColor="@color/font_color_666"/>-->
    <TextView
        android:id="@+id/tv_brf_is_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_h50"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/menu_stu_info_empty"
        android:gravity="start"
        android:textSize="@dimen/font_size_small"
        android:textColor="@color/font_color_777"/>
    <TextView
        android:id="@+id/tv_brf_grade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_brf_is_student"
        app:layout_constraintEnd_toStartOf="@id/view_delete"
        app:layout_constraintTop_toTopOf="@id/guideline_h50"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/error_school_not_found"
        android:layout_marginHorizontal="@dimen/layout_margin_xxsmall"
        android:gravity="end"
        android:textSize="@dimen/font_size"
        android:textColor="@color/font_color_666"/>



</androidx.constraintlayout.widget.ConstraintLayout>